Radzen Blazor components added to the client

--- a/ProjectBank/Client/wwwroot/index.html
+++ b/ProjectBank/Client/wwwroot/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- Snippets for including Radzen theme and js. -->
+<link rel="stylesheet" href="_content/Radzen.Blazor/css/default-base.css">
+<script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
