Radzen CSS and JS now working

--- a/ProjectBank/Client/wwwroot/index.html
+++ b/ProjectBank/Client/wwwroot/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Snippets for including Radzen theme and js. -->
-<link rel="stylesheet" href="_content/Radzen.Blazor/css/default-base.css">
-<script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
+
+
+
 
 <head>
     <meta charset="utf-8" />
@@ -13,6 +13,8 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="ProjectBank.Client.styles.css" rel="stylesheet" />
+    <!-- Snippet for including Radzen theme. -->
+    <link rel="stylesheet" href="_content/Radzen.Blazor/css/default.css">
 </head>
 
 <body>
@@ -25,6 +27,8 @@
     </div>
     <script src="_content/Microsoft.Authentication.WebAssembly.Msal/AuthenticationService.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
+    <!-- Snippet for including Radzen js. -->
+    <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
 </body>
 
 </html>
