--- a/ProjectBank/Client/wwwroot/index.html
+++ b/ProjectBank/Client/wwwroot/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Snippets for including Radzen theme and js. -->
-<link rel="stylesheet" href="_content/Radzen.Blazor/css/default-base.css">
-<script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
 
 <head>
     <meta charset="utf-8" />
@@ -12,7 +9,8 @@
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
-    <link href="ProjectBank.Client.styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="_content/Radzen.Blazor/css/default-base.css">
+    <link href="ProjectBank.Client.styles2.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -25,6 +23,7 @@
     </div>
     <script src="_content/Microsoft.Authentication.WebAssembly.Msal/AuthenticationService.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
 </body>
 
 </html>
