--- a/ProjectBank/Client/wwwroot/index.html
+++ b/ProjectBank/Client/wwwroot/index.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="./loader.css">
     <link rel="stylesheet" href="searchbar.css">
     <link rel="stylesheet" href="browse.css">
+    
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link rel="stylesheet" href="_content/Radzen.Blazor/css/default-base.css">
-    <link href="ProjectBank.Client.styles2.css" rel="stylesheet" />
+    <link href="ProjectBank.Client.styles.css" rel="stylesheet" />
     
 
     <link rel="icon" href="Icon(New).png">
@@ -34,5 +35,6 @@
     <script src="_content/Microsoft.Authentication.WebAssembly.Msal/AuthenticationService.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
+   
 </body>
 </html>
