Small fixes and authorization on settings

--- a/ProjectBank/Client/wwwroot/index.html
+++ b/ProjectBank/Client/wwwroot/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" /> 
-    <base href="/" />
+    <base href="/browse"/>
     <link rel="stylesheet" href="./loader.css">
     <link rel="stylesheet" href="searchbar.css">
     <link rel="stylesheet" href="browse.css">
@@ -29,7 +29,7 @@
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
-        <a href="" class="reload">Reload</a>
+        <a href="/browse" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
     <script src="_content/Microsoft.Authentication.WebAssembly.Msal/AuthenticationService.js"></script>
