--- a/ProjectBank/Client/wwwroot/index.html
+++ b/ProjectBank/Client/wwwroot/index.html
@@ -6,9 +6,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" /> 
     <base href="/browse"/>
-    <link rel="stylesheet" href="./loader.css">
-    <link rel="stylesheet" href="searchbar.css">
-    <link rel="stylesheet" href="browse.css">
+    <link rel="stylesheet" href="./css/loader.css">
+    <link rel="stylesheet" href="./css/searchbar.css">
+    <link rel="stylesheet" href="./css/browse.css">
+    <link rel="stylesheet" href="./css/swipe.css">
     
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
