Styling of Search.razor

--- a/ProjectBank/Client/wwwroot/index.html
+++ b/ProjectBank/Client/wwwroot/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" /> 
     <base href="/browse"/>
     <link rel="stylesheet" href="./css/loader.css">
-    <link rel="stylesheet" href="./css/searchbar.css">
+    <link rel="stylesheet" href="./css/search.css">
     <link rel="stylesheet" href="./css/browse.css">
     <link rel="stylesheet" href="./css/swipe.css">
     
