Small add-ons to the Search.razor and styling for scrollbar color
Add-ons:
- Back to top button
- Individual open/close now.

--- a/ProjectBank/Client/wwwroot/index.html
+++ b/ProjectBank/Client/wwwroot/index.html
@@ -16,6 +16,15 @@
     <link rel="stylesheet" href="_content/Radzen.Blazor/css/default-base.css">
     <link href="ProjectBank.Client.styles.css" rel="stylesheet" />
     
+    <style> /* for the scrollbar */
+        body:not(.rz-default-scrollbars)::-webkit-scrollbar-thumb {
+        background-image: linear-gradient(10deg ,#fd297b, #ff655b);
+        border: 4px solid rgba(0, 0, 0, 0);
+        background-clip: padding-box;
+        border-radius: 8px;
+        }
+    </style>
+    
 
     <link rel="icon" href="Icon(New).png">
     <title>ProjectBank</title>
