Settings.razor --> MyProfile.razor: -- New UI

--- a/ProjectBank/Client/wwwroot/index.html
+++ b/ProjectBank/Client/wwwroot/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="./css/browse.css">
     <link rel="stylesheet" href="./css/swipe.css">
     <link rel="stylesheet" href="./css/projects.css">
+    <link rel="stylesheet" href="./css/MyProfile.css">
+    <link rel="stylesheet" href="./css/ImageUploaderStyle.css">
     
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
