Edit and create project mobile friendly

--- a/ProjectBank/Client/wwwroot/index.html
+++ b/ProjectBank/Client/wwwroot/index.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="./css/projects.css">
     <link rel="stylesheet" href="./css/MyProfile.css">
     <link rel="stylesheet" href="./css/ImageUploaderStyle.css">
+    <link rel="stylesheet" href="./css/CreateProject.css">
+    <link rel="stylesheet" href="./css/EditProject.css">
+    <link rel="stylesheet" href="./css/AdditionalProject.css">
     
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
