Login and out on mobile

--- a/ProjectBank/Client/wwwroot/index.html
+++ b/ProjectBank/Client/wwwroot/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./css/CreateProject.css">
     <link rel="stylesheet" href="./css/EditProject.css">
     <link rel="stylesheet" href="./css/AdditionalProject.css">
+    <link rel="stylesheet" href="./css/FrontPage.css">
     
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
